# Crypt-Wallet

./: README.md  wallet_core.cpp
cpp_wallet_core/: CMakeLists.txt  main.cpp
cpp_wallet_core/include/: bech32.h  bip32.h  wallet.h
cpp_wallet_core/src/: bech32.cpp  bip39.cpp  wallet.cpp
cpp_wallet_core/src/storage/: secure_wallet.cpp  secure_wallet.h
cpp_wallet_core/src/transaction/: signer.h  tx_builder.h  utxo.h
src/transaction/: signer.cpp
transaction/: .css  tx_builder.cpp  utxo.cpp
